# services

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
content/: consulting.md  research-and-development.md  vehicle-maintenance.md
scripts/: docker-build.sh  prepare-image-context.sh  prepare-local.sh
src/: config.rs  content.rs  lib.rs  main.rs  templates.rs
src/content/: service_entry.rs
src/templates/: index_template.rs  nav_entry.rs  service_card.rs  service_template.rs
templates/: index.html  service.html
