[package]

name = "sigma-services"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://services.sigma-tactical.com"
description = "Sigma Tactical Group professional services site"
publish = false

[dependencies]
askama = "0.16.0"
include_dir = "0.7.4"
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", default-features = false, features = ["askama", "warp", "content"] }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.4.3", features = ["server", "test"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
